# plantismash

./: .dockerignore  CLAUDE.md  Dockerfile  README-Release.md  README.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml  tag-on-version.yml
antismash/generic_modules/tfbs_finder/utils/utils_output/: tf_family_by_product.py
